.github/scripts/tests/fixtures/api-impl-006/fail/swift-distinct-causes/Sources/Fixture Module/QueryHelpers.swift
extension QueryExpression where QueryValue == String { }
extension SQLQueryExpression { }
